Branding section added and inline positioning fixed
Branding bar added to the bottom of the context pane, which reads
"Powered by Context".

Also fixed a positioning problem where the context pane would appear to
the right of the nearest element even if they were inline ones (e.g. an
emphasis tag)

--- a/test.html
+++ b/test.html
@@ -14,9 +14,9 @@
 	</head>
 	<body>
 		<div id="lipsum">
-		    <p>Barack Obama Caesar Donald Trump Missouri Iraq war</p>
+		    <p>Barack Obama Caesar <span>Donald Trump</span> Missouri Iraq war</p>
 				<p>Climate other change global warming</p>
-				<p>Ferguson shooting individual</p>
+				<p id="foo">Ferguson shooting individual</p>
 				<p>mandate</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque hendrerit; sem :vitae: est tincidunt fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec sodales eu dui eu lacinia. Etiam mollis lorem ut odio varius pretium. Sed facilisis consectetur malesuada. Quisque nunc turpis, egestas et arcu ac, semper condimentum ante. Morbi a ipsum at sapien dapibus porta.</p>
 		    <p>Donec a rutrum leo, elementum ultricies nulla. Sed vehicula orci a sem consectetur sollicitudin. Nulla volutpat? tempus est, ac pharetra lorem pellentesque et. Etiam sagittis eu nibh non ornare. Phasellus diam diam, dignissim vitae euismod blandit, facilisis id erat. Ut vulputate enim ac placerat mattis. Phasellus sodales in turpis non posuere. Duis nec consectetur enim.</p>
