--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<script src="jquery-2.1.1.min.js" defer></script>
 		<script src="jquery-highlight.js" defer></script>
+		<script src="spinners.min.js" defer></script>
 		<script src="utilities.js" defer></script>
 		<script src="config.js" defer></script>
 		<script src="cardstacks.js" defer></script>
