--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Demo</title>
-		<link href='http://fonts.googleapis.com/css?family=Ubuntu:500|Open+Sans' rel='stylesheet' type='text/css'>
+		<link rel='stylesheet' type='text/css' href="fonts.css" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<script src="jquery-2.1.1.min.js" defer></script>
 		<script src="jquery-highlight.js" defer></script>
