heavy refactoring, no functional changes
Changed naming scheme, made sure variable/constant names had consistent
style, and pulled content retrieving logic out of the main content
script. This will allow retrieving logic to /also/ be used in context
menu (before, it was tightly coupled with the original content script)

--- a/test.html
+++ b/test.html
@@ -11,8 +11,9 @@
 		<script src="utilities.js" defer></script>
 		<script src="config.js" defer></script>
 		<script src="cardstacks.js" defer></script>
-		<script src="hover_pane.js" defer></script>
-		<script src="content_script.js" defer></script>
+		<script src="hover-pane.js" defer></script>
+		<script src="content-retriever.js" defer></script>
+		<script src="content-script.js" defer></script>
 	</head>
 	<body>
 		<div id="lipsum">
