moved css and js into their own folders

--- a/options.html
+++ b/options.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="fonts.css">
+    <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/options.css">
     <script src="scripts/options.js" defer></script>
   </head>
