--- a/test.html
+++ b/test.html
@@ -5,15 +5,15 @@
 		<title>Demo</title>
 		<link rel='stylesheet' type='text/css' href="fonts.css" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<script src="jquery-2.1.1.min.js" defer></script>
-		<script src="jquery-highlight.js" defer></script>
-		<script src="spinners.min.js" defer></script>
-		<script src="utilities.js" defer></script>
-		<script src="config.js" defer></script>
-		<script src="cardstacks.js" defer></script>
-		<script src="hover-pane.js" defer></script>
-		<script src="content-retriever.js" defer></script>
-		<script src="content-script.js" defer></script>
+		<script src="scripts/jquery-2.1.1.min.js" defer></script>
+		<script src="scripts/jquery-highlight.js" defer></script>
+		<script src="scripts/spinners.min.js" defer></script>
+		<script src="scripts/utilities.js" defer></script>
+		<script src="scripts/config.js" defer></script>
+		<script src="scripts/cardstacks.js" defer></script>
+		<script src="scripts/hover-pane.js" defer></script>
+		<script src="scripts/content-retriever.js" defer></script>
+		<script src="scripts/content-script.js" defer></script>
 	</head>
 	<body>
 		<div id="lipsum">
