add tutorial pane to pages
Tutorial not functional, lots of work to do here

--- a/test-plain.html
+++ b/test-plain.html
@@ -3,20 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Demo</title>
-		<link rel='stylesheet' type='text/css' href="fonts.css" />
-		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<script src="scripts/jquery-2.1.1.min.js" defer></script>
-		<script src="scripts/jquery-highlight.js" defer></script>
-		<script src="scripts/spinners.min.js" defer></script>
-		<script src="scripts/utilities.js" defer></script>
-		<script src="scripts/config.js" defer></script>
-		<script src="scripts/cardstacks.js" defer></script>
-		<script src="scripts/hover-pane.js" defer></script>
-		<script src="scripts/content-retriever.js" defer></script>
-		<script src="scripts/content-script.js" defer></script>
 	</head>
 	<body>
-		<div style="width:500">
+		<div style="width:500px">
 				<p>Afghanistan Barack Obama Caesar <span>Donald Trump</span> Missouri Iraq war</p>
 				<p>Climate other change global warming</p>
 				<p id="foo">Ferguson shooting individual</p>
