Redid positioning to allow fixed tutorial
This obviates the need to try and figure out how the body is positioned

--- a/test-plain.html
+++ b/test-plain.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>Demo</title>
 	</head>
-	<body>
+	<body style="margin-left: -50px;">
 		<div style="width:500px">
 				<p>Afghanistan Barack Obama Caesar <span>Donald Trump</span> Missouri Iraq war</p>
 				<p>Climate other change global warming</p>
