Add logos and icons

--- a/logo/logo_green_128.html
+++ b/logo/logo_green_128.html
@@ -1,11 +1,13 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="../styles/fonts.css">
-  <link rel="stylesheet" type="text/css" href="logo.css">
+  <link rel="stylesheet" type="text/css" href="logo_green_128.css">
 </head>
 <body>
   <div class="container">
-    <p><span class="box">T</span></p>
+    <div class="icon">
+      <span class="char">T</span>
+    </div>
   </div>
 </body>
 </html>
