Adding assets for Chrome store publishing
Logos of different sizes, and screenshots

--- a/logo/promo-marquee.html
+++ b/logo/promo-marquee.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="../extension/styles/fonts.css">
-  <link rel="stylesheet" type="text/css" href="promo-small.css">
+  <link rel="stylesheet" type="text/css" href="promo-marquee.css">
 </head>
 <body>
   <div class="container">
