--- a/logo/promo-large.html
+++ b/logo/promo-large.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="../extension/styles/fonts.css">
-  <link rel="stylesheet" type="text/css" href="promo-small.css">
+  <link rel="stylesheet" type="text/css" href="promo-large.css">
 </head>
 <body>
   <div class="container">
