--- a/extension/options.html
+++ b/extension/options.html
@@ -5,7 +5,7 @@
     <script src="scripts/options.js" defer></script>
   </head>
   <body class="options">
-    <h1>Context options</h1>
+    <h1>Tell Me More options</h1>
     <hr>
     <input type="checkbox" id="tutorial" checked>
     <label for="tutorial">Show tutorial when Chrome starts</label>
